CORE-2170 - Fixed cursor jumping to the start of the search text after results return from objectdatarequest

--- a/css/select.less
+++ b/css/select.less
@@ -35,6 +35,7 @@ permissions and limitations under the License.
 
     .Select-input {
         height: 38px;
+        line-height: 38px;
     }
 
     .Select--single .Select-value {
@@ -44,10 +45,6 @@ permissions and limitations under the License.
     .Select--multi { 
         .Select-value {
             margin-top: 8px !important;
-        }
-
-        .Select-input {
-            line-height: 38px;
         }
     }
 
